[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://menus/MapSelection.gd" id="1"]

[node name="MapSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SELECT MAP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MainContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapListContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="MapListLabel" type="Label" parent="VBoxContainer/MainContainer/MapListContainer"]
layout_mode = 2
text = "Available Maps:"

[node name="MapList" type="ItemList" parent="VBoxContainer/MainContainer/MapListContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/MainContainer"]
layout_mode = 2

[node name="MapPreviewContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
visible = false

[node name="PreviewLabel" type="Label" parent="VBoxContainer/MainContainer/MapPreviewContainer"]
layout_mode = 2
text = "Map Preview:"

[node name="MapInfoPanel" type="Panel" parent="VBoxContainer/MainContainer/MapPreviewContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainContainer/MapPreviewContainer/MapInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="MapNameLabel" type="Label" parent="VBoxContainer/MainContainer/MapPreviewContainer/MapInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Map Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MainContainer/MapPreviewContainer/MapInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="MapDescriptionLabel" type="Label" parent="VBoxContainer/MainContainer/MapPreviewContainer/MapInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Map description goes here..."
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/MainContainer/MapPreviewContainer/MapInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="MapDetailsLabel" type="Label" parent="VBoxContainer/MainContainer/MapPreviewContainer/MapInfoPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Map details..."
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "BACK"
custom_minimum_size = Vector2(100, 40)

[node name="RefreshButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "REFRESH"
custom_minimum_size = Vector2(100, 40)

[node name="SelectButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "SELECT MAP"
custom_minimum_size = Vector2(120, 40)